--- a/src/app/common/groups-list/groups-list.component.scss
+++ b/src/app/common/groups-list/groups-list.component.scss
@@ -1,6 +1,6 @@
-.group {
-    margin-left: 20px;
-}
+// .group {
+//     margin-left: 20px;
+// }
 .group-header {
     display: flex;
     align-items: center;
