--- a/src/app/components/imagery-status/imagery-status.component.html
+++ b/src/app/components/imagery-status/imagery-status.component.html
@@ -220,7 +220,7 @@
         >
           {{ row?.total_failed }}
           <div class="group-hover:flex bg-secondaryBg absolute w-[550px] -left-[210px] z-50 shadow-custom-light text-sm p-[10px] rounded-sm hidden gap-[10px] font-Barlow">
-            <span class="text-secondaryText">{{row?.total_failed}} of footprints failed to be processed due to duplicates, improper geometry, etc</span>
+            <span class="text-secondaryText"> Vendor Records failed to added in DB, View logs for more details</span>
           </div>
         </td>
       </ng-container>
@@ -239,12 +239,25 @@
         <td
           mat-cell
           *matCellDef="let row"
-          class="min-w-[80px] group relative !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+          class="min-w-[80px]  relative !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
         >
+        <div class="min-w-[80px] group">
           {{ row?.total }}
           <div class="group-hover:flex bg-secondaryBg absolute w-[231px] p-[10px] text-sm z-50 shadow-custom-light rounded-sm hidden gap-[10px] font-Barlow">
             <span class="text-secondaryText ">{{ row?.total }} of total footprints processed</span>
           </div>
+        </div>
+          <div class="flex  gap-[15px] min-w-[85px] justify-between items-center">
+            <span class="w-[16px] absolute top-[18px] -right-[70px] z-50 h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="menu">
+                <img src="assets/svg-icons/nav-menu-icon.svg" />
+            </span>
+            <mat-menu class="bg-secondaryBg" panelClass="custom-panel-class"  #menu="matMenu" id="site" overlayPanelClass="custom-backdrop-class">
+                <div class="inline-flex px-[15px] py-[5px] font-Barlow flex-col items-start gap-[15px]">
+                    <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="openDialog(row,'parent')">View logs</span>
+                    
+                </div>
+            </mat-menu>
+        </div>
         </td>
         
       </ng-container>
@@ -352,7 +365,7 @@
                   >
                     {{ row?.message?.invalid_records }}
                     <div class="group-hover:flex bg-secondaryBg absolute w-[550px] -left-[330px] z-50 shadow-custom-light text-sm p-[10px] rounded-sm hidden gap-[10px] font-Barlow">
-                      <span class="text-secondaryText">{{ row?.message?.invalid_records }} of footprints failed to be processed due to duplicates, improper geometry, etc</span>
+                      <span class="text-secondaryText">Vendor Records failed to added in DB, View logs for more details</span>
                     </div>
                   </td>
                 </ng-container>
@@ -371,7 +384,7 @@
                   <td
                     mat-cell
                     *matCellDef="let row"
-                    class="min-w-[80px] flex gap-[10px] items-center h-[52.37px] !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
+                    class="min-w-[80px] flex gap-[10px] items-center h-[52.73px] !overflow-visible !pl-[10px] text-secondaryText !border-b !border-b-solid !border-b-secondaryText"
                   >
                   <div class="group !overflow-visible relative">
                     {{ row?.message?.total_records }}
@@ -385,7 +398,7 @@
                       </span>
                       <mat-menu class="bg-secondaryBg" panelClass="custom-panel-class"  #menu="matMenu" id="site" overlayPanelClass="custom-backdrop-class">
                           <div class="inline-flex px-[15px] py-[5px] font-Barlow flex-col items-start gap-[15px]">
-                              <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="openDialog(row)">View logs</span>
+                              <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="openDialog(row,'child')">View logs</span>
                               
                           </div>
                       </mat-menu>
