--- a/src/app/components/sites/sites.component.html
+++ b/src/app/components/sites/sites.component.html
@@ -100,7 +100,7 @@
                     </div>
                     <div
                         class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
-                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent</span>
+                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most Recent</span>
                         <span class="text-secondaryText text-xs font-bold leading-normal">{{site?.most_recent | dateFormat}}</span>
                     </div>
                     <div
@@ -110,12 +110,12 @@
                     </div>
                     <div
                         class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
-                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent</span>
+                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most Recent</span>
                         <span class="text-yellow text-xs font-bold leading-normal">{{site?.most_recent | dateFormat}}</span>
                     </div>
                     <div
                         class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[150px]">
-                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent clear</span>
+                        <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most Recent Clear</span>
                         <span class="text-yellow text-xs font-bold leading-normal">{{site?.most_recent_clear | dateFormat}}</span>
                     </div>
                      @if (site) {
