--- a/src/app/dailogs/image-preview/image-preview.component.html
+++ b/src/app/dailogs/image-preview/image-preview.component.html
@@ -74,7 +74,7 @@
                 <div class="flex flex-col gap-[10px] w-[60px] flex-0 items-start justify-center">
                   <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">GSD</span>
                     <div class="flex items-center gap-[15px] self-stretch w-full">
-                      <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{toDecimal(data?.images?.gsd)}}m</span>
+                      <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{gsdRoundOff(data?.images?.gsd)}}m</span>
                     </div>
                 </div>
                 <div class="flex flex-col gap-[10px] w-[80px] flex-0 items-start justify-center">
@@ -184,7 +184,7 @@
                   <div class="flex flex-col gap-[10px] w-[60px] flex-0 items-start justify-center">
                     <span class="flex-0 text-secondary-heiglight font-Barlow font-bold text-xs leading-[18px]">GSD</span>
                       <div class="flex items-center gap-[15px] self-stretch w-full">
-                        <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{toDecimal(data?.images?.data[currentIndex]?.gsd)}}m</span>
+                        <span class="text-secondaryText text-center text-sm font-medium leading-[18px]">{{gsdRoundOff(data?.images?.data[currentIndex]?.gsd)}}m</span>
                       </div>
                   </div>
                   <div class="flex flex-col gap-[10px] w-[80px] flex-0 items-start justify-center">
